--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h2 class="text-4xl font-bold mb-2 animate-fade-in">Hi, I'm Nikhil 👋</h2>
     <p class="text-lg animate-fade-in">B.Tech Student in AI & DS | CGC Landran</p>
     <p class="text-sm mt-2 animate-fade-in">Passionate about AI, Data Science, and building cool things!</p>
-    <a href="resume/Nikhil resume remastered.pdf" download class="mt-6 inline-block bg-white text-blue-600 px-5 py-2 rounded-full shadow hover:bg-blue-100 transition">Download Resume</a>
+    <a href="resume/Nikhil resume updated.pdf" download class="mt-6 inline-block bg-white text-blue-600 px-5 py-2 rounded-full shadow hover:bg-blue-100 transition">Download Resume</a>
   </section>
 
   <!-- About Section -->
@@ -93,7 +93,7 @@
       <div class="bg-gray-700 p-4 rounded">C++</div>
       <div class="bg-gray-700 p-4 rounded">C</div>
       <div class="bg-gray-700 p-4 rounded">MongoDB</div>
-      <div class="bg-gray-700 p-4 rounded">R (Learning)</div>
+      <div class="bg-gray-700 p-4 rounded">R Language</div>
     </div>
   </section>
 
@@ -106,6 +106,7 @@
       <div class="bg-gray-700 p-4 rounded">Machine Learning</div>
       <div class="bg-gray-700 p-4 rounded">Artificial Intelligence</div>
       <div class="bg-gray-700 p-4 rounded">Google Gemini API</div>
+      <div class="bg-gray-700 p-4 rounded">Deep Learning</div>
     </div>
   </section>
 
@@ -145,3 +146,4 @@
   </footer>
 </body>
 </html>
+
