--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <img src="image/nikhil.png" alt="Nikhil's Profile Picture" class="mx-auto rounded-full w-32 h-32 mb-4 border-4 border-white shadow-lg animate-bounce">
     <h2 class="text-4xl font-bold mb-2 animate-fade-in">Hi, I'm Nikhil 👋</h2>
     <p class="text-lg animate-fade-in">B.Tech Student in AI & DS | CGC Landran</p>
-    <p class="text-sm mt-2 animate-fade-in">Passionate about AI, Data Science, and building cool things!</p>
+    <p class="text-sm mt-2 animate-fade-in">Building projects focused on AI, machine learning, and voice interaction.</p>
     <a href="resume/Nikhil resume.pdf" download class="mt-6 inline-block bg-white text-blue-600 px-5 py-2 rounded-full shadow hover:bg-blue-100 transition">Download Resume</a>
   </section>
 
@@ -80,8 +80,8 @@
   <section id="about" class="py-16 px-6 max-w-4xl mx-auto animate-slide-up">
     <h3 class="text-3xl font-semibold mb-4">About Me</h3>
     <p class="text-lg leading-relaxed">
-      I'm currently pursuing a B.Tech in Artificial Intelligence & Data Science from CGC Landran. 
-      I love exploring tech, especially in AI/ML, voice assistants, and real-world problem solving. I’ve also worked on speech-based translation, data visualization projects.
+      I'm a B.Tech student in Artificial Intelligence & Data Science at CGC Landran. 
+      My primary focus is building applications in the fields of AI/ML and voice assistant technology. My project work includes developing systems for speech-based translation and data visualization.
     </p>
   </section>
 
@@ -146,5 +146,6 @@
   </footer>
 </body>
 </html>
+
 
 
