--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h2 class="text-4xl font-bold mb-2 animate-fade-in">Hi, I'm Nikhil 👋</h2>
     <p class="text-lg animate-fade-in">B.Tech Student in AI & DS | CGC Landran</p>
     <p class="text-sm mt-2 animate-fade-in">Building projects focused on AI, machine learning, and voice interaction.</p>
-    <a href="resume/Nikhil resume.pdf" download class="mt-6 inline-block bg-white text-blue-600 px-5 py-2 rounded-full shadow hover:bg-blue-100 transition">Download Resume</a>
+    <a href="resume/2221394_NIKHILfos.pdf" download class="mt-6 inline-block bg-white text-blue-600 px-5 py-2 rounded-full shadow hover:bg-blue-100 transition">Download Resume</a>
   </section>
 
   <!-- About Section -->
@@ -146,6 +146,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
