--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
   <title>Nikhil | AI & Data Science Engineer</title>
 
-  <!-- SEO (finally) -->
+  <!-- SEO -->
   <meta name="description" content="AI & Data Science student building ML systems, voice assistants, and real-world intelligent applications." />
 
-  <!-- Tailwind CDN -->
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Animations -->
@@ -22,12 +22,8 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-    .animate-fade-in {
-      animation: fade-in 0.8s ease-out forwards;
-    }
-    .animate-slide-up {
-      animation: slide-up 0.8s ease-out forwards;
-    }
+    .animate-fade-in { animation: fade-in 0.8s ease-out forwards; }
+    .animate-slide-up { animation: slide-up 0.8s ease-out forwards; }
   </style>
 </head>
 
@@ -38,7 +34,6 @@
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold tracking-wide">Nikhil</h1>
 
-    <!-- Hamburger -->
     <button id="menu-btn" class="sm:hidden">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -46,7 +41,6 @@
       </svg>
     </button>
 
-    <!-- Desktop Menu -->
     <nav class="hidden sm:flex space-x-6 font-medium">
       <a href="#about" class="hover:text-blue-400">About</a>
       <a href="#skills" class="hover:text-blue-400">Skills</a>
@@ -55,7 +49,6 @@
     </nav>
   </div>
 
-  <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden sm:hidden px-6 pb-4 space-y-2">
     <a href="#about" class="block">About</a>
     <a href="#skills" class="block">Skills</a>
@@ -121,24 +114,31 @@
   <h3 class="text-4xl font-semibold mb-8">Projects</h3>
 
   <div class="grid gap-6">
-    <div class="bg-gray-800 p-6 rounded-lg shadow">
-      <h4 class="text-xl font-semibold">Speech-Based Translation System</h4>
-      <p class="text-gray-400 mt-2">
-        End-to-end voice-to-voice translator using language detection, translation, and Gemini API.
-      </p>
-    </div>
 
     <div class="bg-gray-800 p-6 rounded-lg shadow">
-      <h4 class="text-xl font-semibold">AI RAG Chatbot</h4>
+      <a href="https://github.com/Nikhil00437/cap" target="_blank" class="text-xl font-semibold hover:text-blue-400">
+        AI RAG Chatbot
+      </a>
       <p class="text-gray-400 mt-2">
         Retrieval-Augmented Generation chatbot answering strictly from verified documents.
       </p>
     </div>
 
     <div class="bg-gray-800 p-6 rounded-lg shadow">
-      <h4 class="text-xl font-semibold">Smart Surveillance – Anomaly Detection</h4>
+      <a href="https://github.com/Nikhil00437/discordquestcompletionmodified" target="_blank" class="text-xl font-semibold hover:text-blue-400">
+        Discord Quest Completion Automation
+      </a>
       <p class="text-gray-400 mt-2">
-        Detects abnormal activities using object detection and unsupervised behavior patterns.
+        Reverse-engineered Discord quest mechanics and automated task completion using internal stores and events.
+      </p>
+    </div>
+
+    <div class="bg-gray-800 p-6 rounded-lg shadow">
+      <a href="https://github.com/Nikhil00437/anomaly-detection-smsvuandt-" target="_blank" class="text-xl font-semibold hover:text-blue-400">
+        Smart Surveillance – Anomaly Detection
+      </a>
+      <p class="text-gray-400 mt-2">
+        Detects abnormal activities using object detection and unsupervised behavioral pattern analysis.
       </p>
     </div>
 
@@ -148,6 +148,7 @@
         Webcam-based emotion recognition using DeepFace and OpenCV.
       </p>
     </div>
+
   </div>
 </section>
 
