--- a/index.html
+++ b/index.html
@@ -104,7 +104,19 @@
       <div class="bg-gray-700 p-4 rounded">MongoDB</div>
       <div class="bg-gray-700 p-4 rounded">Machine Learning</div>
       <div class="bg-gray-700 p-4 rounded">Deep Learning</div>
-      <div class="bg-gray-700 p-4 rounded">Linux (Learning)</div>
+      <div class="bg-gray-700 p-4 rounded">Linux (Basics)</div>
+      <div class="bg-gray-700 p-4 rounded">TenserFlow</div>
+      <div class="bg-gray-700 p-4 rounded">JavaScript</div>
+      <div class="bg-gray-700 p-4 rounded">Artificial Intelligence</div>
+      <div class="bg-gray-700 p-4 rounded">DataBase Management System</div>
+      <div class="bg-gray-700 p-4 rounded">OpenCV</div>
+      <div class="bg-gray-700 p-4 rounded">PyTorch</div>
+      <div class="bg-gray-700 p-4 rounded">Git</div>
+      <div class="bg-gray-700 p-4 rounded">GitHub</div>
+      <div class="bg-gray-700 p-4 rounded">OOPs</div>
+      <div class="bg-gray-700 p-4 rounded">RestAPI</div>
+      <div class="bg-gray-700 p-4 rounded">React</div>
+      <div class="bg-gray-700 p-4 rounded">Docker</div>
     </div>
   </div>
 </section>
@@ -173,3 +185,4 @@
 
 </body>
 </html>
+
