--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
 <section id="about" class="py-20 max-w-5xl mx-auto px-6 animate-slide-up">
   <h3 class="text-4xl font-semibold mb-6">About Me</h3>
   <p class="text-lg leading-relaxed text-gray-300">
-    B.Tech student in Artificial Intelligence & Data Science at CGC Landran.
-    I focus on building <span class="text-white font-medium">production-grade ML systems</span>,
-    voice assistants, and real-time AI applications.
-    I care about correctness, performance, and systems that don’t collapse outside demos.
+    I build practical AI and data-driven systems, focusing on reliability, performance, and real-world usability.
+    My work spans <span class="text-white font-medium">RAG pipelines, computer vision applications, and backend AI services</span> using Python.
   </p>
 </section>
 
@@ -185,4 +183,5 @@
 
 </body>
 </html>
+
 
