--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
     </div>
 
     <div class="bg-gray-800 p-6 rounded-lg shadow">
-      <h4 class="text-xl font-semibold">Real-Time Emotion Detection</h4>
+      <a href="https://github.com/Nikhil00437/shiny-winner" target="_blank" class="text-xl font-semibold hover:text-blue-400">
+        Real-Time Emotion Detection
+      </a>
       <p class="text-gray-400 mt-2">
         Webcam-based emotion recognition using DeepFace and OpenCV.
       </p>
@@ -183,5 +185,6 @@
 
 </body>
 </html>
+
 
 
