--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     Building intelligent systems, not toy demos.
   </p>
 
-  <a href="resume/2221394_NIKHILfos.pdf"
+  <a href="resume/Nikhil.pdf"
      download
      class="mt-8 bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-blue-100 transition">
     Download Resume
@@ -185,6 +185,7 @@
 
 </body>
 </html>
+
 
 
 
