--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div class="project-card bg-neutral-900 p-6 rounded-lg border border-neutral-800
                     hover:border-orange-400 hover:-translate-y-1 hover:shadow-lg
                     transition-all duration-200 ease-out reveal">
-          <a href="https://github.com/Nikhil00437/cap" target="_blank"
+          <a href="https://github.com/Nikhil00437/discordquestcompletionmodified" target="_blank"
              class="text-xl font-semibold hover:text-orange-400">
              Discord Quest Automation
           </a>
@@ -389,7 +389,7 @@
           <div class="project-card bg-neutral-900 p-6 rounded-lg border border-neutral-800
                       hover:border-orange-400 hover:-translate-y-1 hover:shadow-lg
                       transition-all duration-200 ease-out reveal">
-            <a href="https://github.com/Nikhil00437/cap" target="_blank"
+            <a href="https://github.com/Nikhil00437/anomaly-detection-smsvuandt-" target="_blank"
                class="text-xl font-semibold hover:text-orange-400">
                Smart Surveillance – Anomaly Detection
             </a>
@@ -691,3 +691,4 @@ document.querySelectorAll(".contact-card").forEach(card => {
 
 </body>
 </html>
+
