--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
     <p class="hero-sub">Building intelligent systems — not toy demos.</p>
 
-    <a href="resume/Nikhil.pdf" download class="btn-primary">
+    <a href="resume/Nikhil_resume.pdf" download class="btn-primary">
       Download Resume
       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
     </a>
@@ -741,3 +741,4 @@
 </script>
 </body>
 </html>
+
